@@ -1,3 +1,4 @@
+2213 [OneClick] added leading name option
 2212 [DGIndexNV] added support for MP4 container (requires dgindexnv 2044+)
 2211 [OneClick] optimized TrueHD handling with eac3to
 2210 [OneClick] optimized job creation process when several tracks are used
